--- a/src/views/home/index.less
+++ b/src/views/home/index.less
@@ -1,7 +1,69 @@
 .home {
   .banner {
     width: 100%;
-    height: 400px;
-    background-color: #eee;
+    height: 600px;
+    background: url(../images/banner.jpg) no-repeat center;
+    background-size: cover;
+    position: relative;
+    .bannermask {
+      padding-top: 100px;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, .4);
+      backdrop-filter: blur(8px);
+    }
+    h2 {
+      font-size: 48px;
+      color: @maincolor;
+      text-align: center;
+      font-weight: 600;
+      text-shadow: -1px 1px 1px #000;
+    }
+    h3 {
+      font-size: 24px;
+      margin-top: 20px;
+      text-align: center;
+      color: #ccc;
+      text-shadow: -1px 1px 1px #000;
+    }
+    .compiler {
+      width: 800px;
+      margin: 30px auto 0;
+      display: flex;
+      justify-content: space-between;
+      & > div {
+        height: 230px;
+        flex-basis: 50%;
+        border: 1px solid #666;
+        box-sizing: content-box;
+        .hd {
+          background: #333;
+          height: 40px;
+          line-height: 40px;
+          text-indent: 1em;
+          h4 {
+            color: #ccc;
+            font-size: 16px;
+          }
+        }
+        .bd {
+          background: #000;
+          height: 189px;
+          overflow-y: auto;
+          color: #eee;
+          textarea.ant-input {
+            color: #eee;
+          }
+        }
+      }
+      .output {
+        .bd {
+          padding: 10px;
+        }
+      }
+    }
   }
 }
