--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -1,5 +1,10 @@
 @import url('./normalize.less');
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #fdfdfd;
 }
@@ -11,18 +16,16 @@ body {
 }
 &::-webkit-scrollbar-track {
   background: transparent;
-  border-radius: 10px;
 }
 &::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.15);
-  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.35);
 }
 
 .wrap {
   .inner {
     .header {
       height: 50px;
-      background-color: @bgcolor;
+      background-color: #323330;
       .bd {
         width: 1200px;
         margin: 0 auto;
@@ -53,6 +56,10 @@ body {
           }
         }
       }
+    }
+    .footer {
+      height: 400px;
+      background-color: #20232a;
     }
   }
 }
